--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -47,6 +47,10 @@
   box-sizing: border-box;
 }
 
+ ::-webkit-scrollbar{
+   display:none;
+ }
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
