继续完成后台界面

--- a/src/main/resources/templates/admin/AllAdminList.html
+++ b/src/main/resources/templates/admin/AllAdminList.html
@@ -17,7 +17,7 @@
     <link href="../css/font-awesome.css" rel="stylesheet">
     <link href="../css/cropper.css" rel="stylesheet">
     <link href="../css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <title>管理员列表</title>
+    <title>管理员列表-Гулаш&nbsp;система&nbsp;会议管理系统</title>
 </head>
 <body>
 <div th:replace="allUser/adminHeader::adminHeader"></div>
