搭建前台界面

--- a/src/main/resources/templates/allUser/adminHeader.html
+++ b/src/main/resources/templates/allUser/adminHeader.html
@@ -126,7 +126,7 @@
             </a>
             <div id="collapseSeat" class="collapse" aria-labelledby="headingSeat" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="#">全部席位</a>
+                    <a class="collapse-item" th:href="@{/admin/allSeatList}">全部席位</a>
                     <a class="collapse-item" th:href="@{/admin/addSeatPage}">添加席位</a>
                 </div>
             </div>
