--- a/src/main/resources/templates/admin/MemberDetail.html
+++ b/src/main/resources/templates/admin/MemberDetail.html
@@ -12,11 +12,14 @@
     <script src="../js/jquery-cropper.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/dataTables.bootstrap4.min.js"></script>
+    <script src="../js/bootstrap-select.js"></script>
+    <script src="../js/bootstrap-select-defaults-zh_CN.js"></script>
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/sb-admin-2.css" rel="stylesheet">
     <link href="../css/font-awesome.css" rel="stylesheet">
     <link href="../css/cropper.css" rel="stylesheet">
     <link href="../css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="../css/bootstrap-select.css" rel="stylesheet">
     <title>用户详情-Гулаш&nbsp;система&nbsp;会议管理系统</title>
 </head>
 <body>
@@ -53,7 +56,8 @@
                             <td>是否允许登录</td>
                             <td>
                                 <span id="loginStatus" th:if="${delegate.enable_Login}" class="fa fa-check"></span>
-                                <span id="loginStatus" th:unless="${delegate.enable_Login}" class="fa fa-times" aria-hidden="true"></span>
+                                <span id="loginStatus" th:unless="${delegate.enable_Login}" class="fa fa-times"
+                                      aria-hidden="true"></span>
                             </td>
                         </tr>
                     </table>
@@ -65,14 +69,25 @@
                         </tr>
                         <tr>
                             <td>申请状态</td>
-                            <td><span th:text="${delegate.applicationStatus}"></span></td>
+                            <td><span id="applicationStatus" th:text="${delegate.applicationStatus}"></span>
+                                <button id="applicationStatusButton" class="btn btn-primary"
+                                        onclick="editApplication()"><i class="fa fa-edit"></i></button>
+                                <div id="applicationSelectGroup" hidden="hidden">
+                                    <select id="applicationStatusSelect" title="选择一个申请状态"></select>
+                                    <button id="cancelApplicationStatusEdit" class="btn btn-secondary"><i
+                                            class="fa fa-times"></i></button>
+                                    <button id="submitApplicationStatusEdit" class="btn btn-primary"><i
+                                            class="fa fa-check"></i></button>
+                                </div>
+                            </td>
                         </tr>
                     </table>
                     <h3>其他信息</h3>
                     <table class="table table-hover text-center">
                         <tr>
                             <td>所属代表团</td>
-                            <td><a th:text="${delegate.schoolName}" th:href="@{/admin/groupMemberDetailPage(groupID=${delegate.groupID})}"></a></td>
+                            <td><a th:text="${delegate.schoolName}"
+                                   th:href="@{/admin/groupMemberDetailPage(groupID=${delegate.groupID})}"></a></td>
                         </tr>
                     </table>
                 </div>
@@ -106,45 +121,69 @@
     });
 
     function editLoginStatus() {
-        var statusCheck=$('#loginStatus').hasClass('fa-check');
-        if (statusCheck===true){
+        var statusCheck = $('#loginStatus').hasClass('fa-check');
+        if (statusCheck === true) {
             $.ajax({
-                type:'POST',
-                url:'/admin/modifyUserLoginStatus',
-                dataType:'json',
-                data:{
-                    'LoginStatus':'true',
-                    'userID':[[${delegate.ID}]]
+                type: 'POST',
+                url: '/admin/modifyUserLoginStatus',
+                dataType: 'json',
+                data: {
+                    'LoginStatus': 'true',
+                    'userID': [[${delegate.ID}]]
                 },
-                success:function (data) {
-                    if (data['status']==='SUCCESS'){
+                success: function (data) {
+                    if (data['status'] === 'SUCCESS') {
                         $('#loginStatus').removeClass('fa-check').addClass('fa-times')
-                    }
-                    else if(data['status']==='ERROR'){
+                    } else if (data['status'] === 'ERROR') {
                         alert('修改登陆权限失败请稍后再试')
                     }
                 }
             })
-        }else if (statusCheck===false){
+        } else if (statusCheck === false) {
             $.ajax({
-                type:'POST',
-                url:'/admin/modifyUserLoginStatus',
-                dataType:'json',
-                data:{
-                    'LoginStatus':'false',
-                    'userID':[[${delegate.ID}]]
+                type: 'POST',
+                url: '/admin/modifyUserLoginStatus',
+                dataType: 'json',
+                data: {
+                    'LoginStatus': 'false',
+                    'userID': [[${delegate.ID}]]
                 },
-                success:function (data) {
-                    if(data['status']==='SUCCESS'){
+                success: function (data) {
+                    if (data['status'] === 'SUCCESS') {
                         $('#loginStatus').removeClass('fa-times').addClass('fa-check')
-                    }
-                    else if(data['status']==='ERROR'){
+                    } else if (data['status'] === 'ERROR') {
                         alert('修改登陆权限失败请稍后再试')
                     }
                 }
             })
         }
     }
+
+    function editApplication() {
+        $('#applicationStatus').attr('hidden', 'hidden');
+        $('#applicationStatusButton').attr('hidden', 'hidden');
+        $('#applicationSelectGroup').removeAttr('hidden');
+        $.ajax({
+            url: '/admin/getApplicationStatusList',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                for (var i = 0; i < data.length; i++) {
+                    $('#applicationStatusSelect').append("<option value=" + data[i].id + ">" + data[i].text + "</option>")
+                }
+                $('#applicationStatusSelect').selectpicker('refresh');
+                $('#applicationStatusSelect').selectpicker('render');
+            }
+        });
+    }
+
+    $(function () {
+        $('#applicationStatusSelect').selectpicker(
+            {
+                liveSearch: true
+            }
+        );
+    })
 </script>
 </body>
 </html>
