--- a/src/main/resources/templates/allUser/adminHeader.html
+++ b/src/main/resources/templates/allUser/adminHeader.html
@@ -130,6 +130,8 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" th:href="@{/admin/allSeatList}">全部席位</a>
                         <a class="collapse-item" th:href="@{/admin/addSeatPage}">添加席位</a>
+                        <h6 class="collapse-header">处理席位选定</h6>
+                        <a class="collapse-item" th:href="@{/admin/seatWaitProcess}">待确认的席位</a>
                     </div>
                 </div>
             </li>
