--- a/src/main/resources/templates/user/UserInterviewDetail.html
+++ b/src/main/resources/templates/user/UserInterviewDetail.html
@@ -37,7 +37,7 @@
                     <table class="table table-hover text-center">
                         <tr>
                             <td>面试官：</td>
-                            <td><span th:text="${interview.adminName}"></span></td>
+                            <td><span th:text="${admin.name}"></span></td>
                         </tr>
                         <tr>
                             <td>面试时间：</td>
